<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>openmldb-test-java</artifactId>
        <groupId>com.4paradigm.openmldb</groupId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>openmldb-test-common</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>

        <openmldb.jdbc.version>0.6.4</openmldb.jdbc.version>
        <openmldb.navtive.version>0.6.4-allinone</openmldb.navtive.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.4paradigm.openmldb</groupId>
            <artifactId>openmldb-deploy</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!--   4paradigm     -->
        <dependency>
            <groupId>com.4paradigm.openmldb</groupId>
            <artifactId>openmldb-jdbc</artifactId>
            <version>${openmldb.jdbc.version}</version>
<!--            <scope>system</scope>-->
<!--            <systemPath>/Users/zhaowei/Downloads/openmldb-jdbc-0.6.0-SNAPSHOT.jar</systemPath>-->
        </dependency>
        <dependency>
            <groupId>com.4paradigm.openmldb</groupId>
            <artifactId>openmldb-native</artifactId>
            <version>${openmldb.navtive.version}</version>
<!--            <scope>system</scope>-->
<!--            <systemPath>/Users/zhaowei/Downloads/openmldb-native-0.6.0-SNAPSHOT.jar</systemPath>-->
        </dependency>


        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.5.2</version>
        </dependency>
        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.2.0</version>
        </dependency>
    </dependencies>

</project>